# ocr_scanner

./: ex_paddle_OCR.py  ex_paddle_OCR_2.py  ex_paddle_OCR_3.py  main.py  make.bat  make.ps1  pyproject.toml
