[project]
name = "ocr-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "paddleocr==2.10.0",
    "paddlepaddle>=3.1.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.9.0",
    "setuptools>=80.9.0",
]
