[project]
name = "ocr-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.0.3",
    "paddlepaddle==3.2.2",
    "pyautogui>=0.9.54",
    "pyperclip>=1.9.0",
    "pyside6>=6.10.2",
    "setuptools>=82.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
